<resources>
    <string name="app_name">Piensa en Positivo</string>
    <string name="mas">+</string>
    <string name="ilusion">ilusion</string>
    <string name="ilusionate">ilusionate</string>
    <string name="tv_Positivo">SOY UN GANADOR Y ME MEREZCO QUE TODO ME VAYA BIEN</string>
    <string name="b_positivo">positivo</string>
    <string name="b_entrena">Entrena </string>
    <string name="b_salud">Salud</string>
    <string name="b_msg_autoestima">Autoestima</string>
    <string name="volver">volver</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_home">Home</string>
    <string name="entrar">Entrar</string>
    <string name="inicio">Inicio</string>
    <string name="vivir_ilusion">vivir sin ilusion es un como comer un arroz sin avecrem</string>
    <string name="xd">Introduce tu email para empezar e mejorar</string>
    <string name="Enviar">Enviar</string>
    <string name="Suscribete">Suscribete a newsletter</string>
    <string name="comparte_ux">Comparte tu experiencia</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrarme">Registrarme</string>
    <string name="usuario_nuevo">Usuario nuevo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="elecciones_en_la_vida">Nuestras vidas son una suma total de las opciones que hemos tomado</string>
    <string name="Compartir">Compartir</string>
</resources>