<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crees_creas"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="390dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="400dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_500"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/et_RegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:ems="10"
                android:hint="@string/correo_electr_nico"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_RegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:ems="10"
                android:hint="Nombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_registrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarme" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>