<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Ilusion"
    android:background="@drawable/img_2">

  <Button
      android:id="@+id/Volver_inicio_ilu"
      android:layout_width="106dp"
      android:layout_height="63dp"
      android:background="@android:color/transparent"
      android:text="@string/volver"
      android:textStyle="bold"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.484"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.91" />

  <ImageView
      android:id="@+id/iv_autestima"
      android:layout_width="400dp"
      android:layout_height="260dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.492"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.45"
      app:srcCompat="@drawable/autoestima1"
      android:contentDescription="TODO" />

  <ImageView
      android:id="@+id/iv_ilusionate"
      android:layout_width="400dp"
      android:layout_height="260dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.492"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.452"
      app:srcCompat="@drawable/ilusionate_1" />

  <ImageView
      android:id="@+id/iv_crees_creas"
      android:layout_width="400dp"
      android:layout_height="260dp"
      android:contentDescription="TODO"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.37"
      app:srcCompat="@drawable/crees_creas" />



  <Button
      android:id="@+id/bt_ilusion"
      android:layout_width="110dp"
      android:layout_height="108dp"
      android:background="@android:color/transparent"
      android:text="@string/ilusionate"
      android:textColor="@color/purple_700"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.817"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.728" />

  <TextView
      android:id="@+id/tv_vivir_ilusion"
      android:layout_width="356dp"
      android:layout_height="442dp"
      android:fontFamily="@font/beth_ellen"
      android:gravity="center"
      android:text="@string/vivir_ilusion"
      android:textColor="#FF0000"
      android:textSize="30dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.006" />

</androidx.constraintlayout.widget.ConstraintLayout>